fix(layout): in mobile last calender no longer partially behind gradient

--- a/src/style-auro-calendar.scss
+++ b/src/style-auro-calendar.scss
@@ -9,6 +9,7 @@
 /* stylelint-disable color-function-notation, at-rule-empty-line-before */
 
 $mobile-header-height: 86px;
+$mobile-footer-height: 200px;
 
 :host {
   @include auro_breakpoint($max: $auro-breakpoint-sm) {
@@ -106,7 +107,7 @@ $mobile-header-height: 86px;
   left: 50%;
   display: none;
   width: 100%;
-  height: 200px;
+  height: $mobile-footer-height;
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-end;
@@ -121,8 +122,8 @@ $mobile-header-height: 86px;
   bottom: 0;
   left: 50%;
   display: none;
-  width: 336px; // match the calendar month width;
-  height: 200px;
+  width: 336px; // match the calendar month width; This needs to be deal with when doing the tiny mobile device layout.
+  height: $mobile-footer-height;
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-end;
@@ -148,6 +149,13 @@ $mobile-header-height: 86px;
     width: 100%;
     height: calc(100vh - $mobile-header-height);
     overflow-y: scroll;
+
+    &::after {
+      content: '';
+      display: block;
+      height: $mobile-footer-height;
+      width: 100%;
+    }
   }
 }
 
